src/styles/main.css
@import "./theme";

*:before,
*:after {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
  min-width: 375px;
  background-color: var(--color-bg);
}

body {
  color: var(--color-primary);
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;

  a,
  .link {
    color: var(--color-links);
    text-decoration: none;
    cursor: pointer;
  }

  input::-webkit-outer-spin-button,
  input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  input[type="number"] {
    -moz-appearance: textfield;
  }

  input,
  textarea {
    width: 100%;
    padding: 6px 12px;
    margin: 6px auto;
    border: 1px solid var(--color-borders);
    border-radius: 3px;
  }

  button,
  .button {
    display: inline-block;
    padding: 6px 12px;
    border: 1px solid var(--color-borders);
    text-decoration: none;
    text-align: center;
    transition: all 0.2s;
    color: var(--color-button-fg);
    background-color: var(--color-button-bg);
  }
  button:disabled,
  button[disabled] {
    background-color: var(--color-disabled-button-bg);
    color: var(--color-disabled-button-fg);
  }
}

::placeholder {
  color: var(--color-gray);
}

.error {
  color: red;
  margin: 1rem auto;
  text-align: center;
}

.small {
  font-size: 0.8rem;
}

.sat-symbol {
  margin-right: 4px;
}

.page-title {
  font-size: 1.5rem;
  font-weight: bold;
  text-align: center;
  margin: 2rem auto;
}

.links {
  margin: 4rem auto;
  display: flex;
  font-size: 1.5rem;
  justify-content: space-around;
}

.header-nav {
  margin-top: 3rem;
  margin-bottom: 2rem;
  .tabs {
    max-width: 750px;
    .tab {
      width: unset;
    }
    a {
      width: 100%;
    }
  }
}

.center-display {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 375px;
  margin: 0 auto;
  text-align: center;
}

.amount-input {
  flex-direction: row;
  .currency-label {
    margin-right: 0.5rem;
    font-size: 1.5rem;
  }
  .toggle-currency {
    cursor: pointer;
    margin-left: 0.5rem;
    font-size: 1.5rem;
  }
}

.note-input {
  textarea {
    font-size: 0.9rem;
  }
}

.action-container {
  padding-top: 1rem;
}

.invoice-paid {
  margin: 1.5rem;
}

.amount-converted {
  max-width: 375px;
  margin: 0 auto;
  margin-top: 1rem;
  text-align: center;
  .converted-sats {
  }
  .converted-usd {
    margin-top: 0.3rem;
    color: var(--color-secondary);
  }
}

.suspense-fallback,
.error-fallback {
  display: block;
  margin: 20% auto;
  padding: 5%;
  text-align: center;
  pre {
    white-space: pre-wrap;
  }
}

.separator {
  margin: 0 0.5rem;
}

#root {
  height: 100%;
}

.tabs {
  max-width: 400px;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  margin-bottom: 1.5rem;
  .tab {
    width: 100%;
    border: thin solid var(--color-borders);
    padding: 0.5rem;
    text-align: center;
  }
  .active {
    background-color: var(--color-active-bg);
    font-weight: bold;
    color: var(--color-primary);
  }
}

#main-container {
  height: 92%;
  width: 90%;
  margin: 0 auto;
  max-width: 1024px;
  display: flex;
  flex-direction: column;
  padding-top: 1.5rem;
}

#footer {
  width: 100%;
  position: fixed;
  bottom: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
  background-color: var(--color-bg);
  z-index: 1;
}

.powered-by {
  font-size: 0.85rem;
  color: var(--color-secondary);
  text-align: center;
}

.header {
  display: flex;
  justify-content: space-between;
  .balance {
    cursor: pointer;
    .title {
      text-align: center;
      margin-bottom: 0.5rem;
    }

    .value {
      text-align: center;
      .primary {
        font-size: 1.2rem;
        text-align: center;
      }
      .secondary {
        color: var(--color-secondary);
        margin-top: 0.2rem;
        text-align: center;
      }
    }
  }
}

.login {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 25%;
  .intro {
    margin-bottom: 1rem;
  }
  form {
    width: 100%;
  }
  * input {
    min-width: 275px;
  }
  input.auth-code {
    width: unset;
  }
}

.captcha-challenge {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 25%;
  .loading {
    margin-top: 1rem;
  }
}

.invoice-message {
  margin: 0.75rem auto;
  font-weight: bold;
  padding: 0.5rem;
  div.link {
    margin-top: 0.5rem;
  }
}

.payment-destination-code {
  color: var(--color-gray);
  font-size: 0.75rem;
}

.copy-message {
  font-size: 0.8rem;
  margin-top: 1rem;
}

.invoice-copied {
  margin-top: 0.25rem;
  padding: 0.25rem;
  display: inline-block;
  background-color: var(--color-highlight-bg);
  color: var(--color-highlight-fg);
}

.fee-amount {
  padding: 0.75rem;
  border: thin dashed var(--color-borders);
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 0.75rem;
  .label {
    margin-right: 0.75rem;
    font-weight: bold;
  }
  .fee-usd-amount {
    text-align: left;
  }
}

.geetest_wind.geetest_panel .geetest_panel_box {
  top: 25% !important;
}

.qr-code-camera {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: var(--color-highlight-bg);
  padding-top: 10%;
  #qr-code-camera {
    margin: 0 auto;
    max-width: 600px;
    video {
      width: 100% !important;
    }
  }
  .close {
    margin-top: 0.5rem;
    color: var(--color-highlight-fg);
  }
  .spinner,
  .close {
    text-align: center;
  }
}

.scan {
  margin: 1rem auto;
  font-size: 1.25rem;
  font-weight: bold;
}

